force-app/main/default/objects/GenericOptionsLists__c/GenericOptionsLists__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Listas de opções genericas para ser utilizadas nos projetos</description>
    <label>Listas de Opções Generica</label>
</CustomObject>