force-app/main/default/objects/GenericOptionsLists__c/fields/APIDateTime__c.field-meta.xml
<CustomField>
    <fullName>APIDateTime__c</fullName>
    <label>Data/Hora</label>
    <type>DateTime</type>
</CustomField>