force-app/main/default/objects/GenericOptionsLists__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <label>Nome da API</label>
    <length>30</length>
    <type>Text</type>
</CustomField>