force-app/main/default/objects/GenericOptionsLists__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Descrição 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>