force-app/main/default/objects/GenericOptionsLists__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>